Lots of minor improvements and bug fixes